ec2-Jenkins-install.yml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
    Instancetype:
        Description: EC2 instance type selection
        Type: String
        Default: t2.micro
        AllowedValues: 
            - t2.micro
            - t2.medium
            - t2.small
            - m4.large
    
Resources:
    EC2Instance:
        Type: AWS::EC2::Instance
        Properties:
            ImageId: ami-0dfcb1ef8550277af
            InstanceType: !Ref Instancetype
            SecurityGroups:
                - !Ref InstanceSecurityGroup
                - !Ref InstanceHTTPSecurityGroup
                - !Ref InstanceJenkinsSecurityGroup
            UserData:
                Fn::Base64: !Sub |
                    #!/bin/bash
                    sudo yum update -y
                    sudo amazon-linux-extras install -y php7.4
                    sudo wget -O /etc/yum.repos.d/jenkins.repo \
                    https://pkg.jenkins.io/redhat-stable/jenkins.repo
                    sudo rpm --import https://pkg.jenkins.io/redhat-stable/jenkins.io.key
                    sudo yum upgrade
                    sudo amazon-linux-extras install java-openjdk11 -y
                    sudo yum install jenkins -y
                    sudo systemctl enable jenkins
                    sudo systemctl start jenkins
                    sudo systemctl status jenkins
                    
    InstanceSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Enable SSH via port 22
            SecurityGroupIngress:
                - CidrIp: 0.0.0.0/0
                  IpProtocol: tcp
                  FromPort: 22
                  ToPort: 22
    InstanceHTTPSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Enable HTTP via port 80
            SecurityGroupIngress:
                - CidrIp: 0.0.0.0/0
                  IpProtocol: tcp
                  FromPort: 80
                  ToPort: 80
    InstanceJenkinsSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Enable access to jenkins via port 8080
            SecurityGroupIngress:
                - CidrIp: 0.0.0.0/0
                  IpProtocol: tcp
                  FromPort: 8080
                  ToPort: 8080
    
Outputs:
    InstanceID:
        Description: Instacne ID of the instance created
        Value: !Ref EC2Instance
    PublicDNS:
        Description: Get public DNS name
        Value: !GetAtt
                - EC2Instance
                - PublicDnsName
    PublicIP:
        Description: Get public IP address
        Value: !GetAtt
                - EC2Instance
                - PublicIp
